alignment fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -44,4 +43,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
